RESOLVED FIXED282312
Fix smart pointer warning in WebExtensionDynamicScriptsCocoa.mm
https://bugs.webkit.org/show_bug.cgi?id=282312
Summary Fix smart pointer warning in WebExtensionDynamicScriptsCocoa.mm
Ryosuke Niwa
Reported 2024-10-29 18:56:57 PDT
Fix smart pointer warning in WebExtensionDynamicScriptsCocoa.mm.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-29 18:57:07 PDT
Ryosuke Niwa
Comment 2 2024-10-29 18:59:31 PDT
EWS
Comment 3 2024-10-30 00:58:36 PDT
Committed 285888@main (a105225b2a83): <https://commits.webkit.org/285888@main> Reviewed commits have been landed. Closing PR #35926 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.