Fix smart pointer warning in WebExtensionDynamicScriptsCocoa.mm https://bugs.webkit.org/show_bug.cgi?id=282312

Reviewed by Geoffrey Garen.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionDynamicScriptsCocoa.mm:
(WebKit::WebExtensionDynamicScripts::sourcePairForResource):

Canonical link: https://commits.webkit.org/285888@main